<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wifi State</string>
    <string name="ok">OK</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_to">yh1224%2Borange@gmail.com</string>
    <string name="pref_enable_title">Enable</string>
    <string name="pref_enable_summary">Show Wi-Fi connection state notification.</string>
    <string name="pref_clearable_title">Clearable</string>
    <string name="pref_clearable_summary">Enable to clear notification.</string>
    <string name="pref_clear_on_connected_title">Clear on connect</string>
    <string name="pref_clear_on_connected_summary">Clear notification when Wi-Fi connected.</string>
    <string name="pref_clear_on_disabled_title">Clear on disable</string>
    <string name="pref_clear_on_disabled_summary">Clear notification when network disabled.</string>
    <string name="pref_show_data_network_title">Mobile network</string>
    <string name="pref_show_data_network_summary">Show mobile network status when Wi-Fi disabled.</string>
    <string name="pref_action_on_tap_title">Action on tap notification</string>
    <string name="state_enabling">Enabling Wi-Fi</string>
    <string name="state_enabled">Wi-Fi enabled</string>
    <string name="state_scanning">Scanning</string>
    <string name="state_authenticating">Authenticating</string>
    <string name="state_associating">Associating</string>
    <string name="state_reassociating">Reassociating</string>
    <string name="state_associated">Associated</string>
    <string name="state_handshaking">Handshaking</string>
    <string name="state_handshake_completed">Handshake completed</string>
    <string name="state_obtaining_ipaddr">Obtaining IP address</string>
    <string name="state_connected">Connected</string>
    <string name="state_disconnected">Disconnected</string>
    <string name="state_unavailable">Network unavaiable</string>
    <string name="state_mobile_connecting">Connecting to mobile network</string>
    <string name="state_mobile_connected">Connected to mobile network</string>
    <string name="wifi">Wi-Fi</string>
    <string name="wifi_reenable">Reconnect</string>
    <string name="wifi_settings">Wi-Fi settings</string>
    <string name="checking_status">Checking status...</string>
    <string name="enabling_wifi">Enabling Wi-Fi...</string>
    <string name="disabling_wifi">Enabling Wi-Fi...</string>
    <string name="press_menu_to_config">Press MENU to configure application settings.</string>
    <string name="connect_to">Connect to</string>
    <string name="open_dialog">Open Dialog</string>
    <string name="toggle_wifi">Toggle Wi-Fi</string>
    <string name="reenable_wifi">Reconnect Wi-Fi</string>
    <string name="open_wifi_settings">Wi-Fi settings</string>
</resources>
