<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <FrameLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:layout_margin="4dp">
        <LinearLayout android:orientation="vertical"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:paddingLeft="4dp">
            <TextView android:id="@+id/network_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:textSize="20sp"
                android:textStyle="bold" />
            <TextView android:id="@+id/network_status"
                android:text="@string/checking_status"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:gravity="right">
            <ToggleButton android:id="@+id/wifi_toggle"
                android:textOn="@string/wifi" android:textOff="@string/wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:enabled="false" />
        </LinearLayout>
    </FrameLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:padding="4dp">
        <Button android:id="@+id/wifi_settings" android:text="@string/wifi_settings"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:layout_weight="1" />
        <Button android:id="@+id/wifi_reenable" android:text="@string/wifi_reenable"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:layout_weight="1" android:enabled="false" />
    </LinearLayout>
    <TextView android:text="@string/press_menu_to_config"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:textSize="12sp" android:padding="8dp" />
</LinearLayout>
